feat: Add YouTube component

--- a/docs/B Tech/Frontend Web Development/Sample Lesson.mdx
+++ b/docs/B Tech/Frontend Web Development/Sample Lesson.mdx
@@ -2,6 +2,8 @@
 sidebar_position: 1
 ---
 
+import Youtube from "@site/src/components/Youtube";
+
 Welcome to the lesson on Front-end web development. This would be a **self-paced class** which focuses on one of the fundamental topics in HTML - Text Fundamentals. Please make sure that you are completing the entire lesson.
 
 # HTML Text Fundamentals
@@ -75,6 +77,8 @@ Here are some useful links on how to create paragraphs.
 Lists are everywhere in life, from your shopping list to the list of directions you subconsciously follow to get to your house every day! Lists are everywhere on the web too. Here are a few resources on how to create lists.
 
 [Click here](https://www.youtube.com/watch?v=kUMe1FH4CHE&t=2985s) to watch a video on lists (watch from 00:49:00 to 00:59:00) (10 minutes)
+
+<Youtube videoId="kUMe1FH4CHE" start="2940" end="3600" />
 
 [Click here](https://www.freecodecamp.org/learn/responsive-web-design/basic-html-and-html5/create-a-bulleted-unordered-list) to learn & practice unordered list (3 minutes)
 
