--- a/course1/docs/Frontend Web Development/Sample Lesson.mdx
+++ b/course1/docs/Frontend Web Development/Sample Lesson.mdx
@@ -4,11 +4,24 @@ sidebar_position: 1
 
 import Youtube from "@site/src/components/Youtube";
 
+`console.log("This is a single line of code")`
+
+``` js
+  console.log("These are multiple lines of code")
+```
+
+> This is a blockquote
+>
+> > This is the next line
+>
+
 Welcome to the lesson on Front-end web development. This would be a **self-paced class** which focuses on one of the fundamental topics in HTML - Text Fundamentals. Please make sure that you are completing the entire lesson.
 
 # HTML Text Fundamentals
 
 ## What are HTML Text Fundamentals?
+
+### H3
 
 One of HTML's main jobs is to give text structure and meaning so that a browser can display it correctly. This lesson helps you to understand the way HTML can be used to structure a page of text by adding headings and paragraphs, emphasizing words, creating lists, and more.
 
@@ -16,7 +29,7 @@ One of HTML's main jobs is to give text structure and meaning so that a browser 
 
 Let us look at two versions of a webpage to understand the reason why we should learn HTML Text Fundamentals.
 
-[Version 1:](https://ramkumar-anandan.github.io/FEWD1104-boilerplate/)
+[Version 1:](/course1/docs/Frontend%20Web%20Development/Sample%20Lesson#what-are-html-text-fundamentals)
 
 [Version 2:](https://ramkumar-anandan.github.io/FEWD1104-final/)
 
@@ -26,7 +39,7 @@ Structuring the web page has a lot of other benefits as well.
 
 They are:
 
-1. **Attracts users**
+1. _Attracts users_
 
    Users looking at a web page tend to scan quickly to find relevant content, often just reading the headings, to begin with. If they can't see anything useful within a few seconds, they'll likely leave the page.
 
@@ -72,13 +85,14 @@ Here are some useful links on how to create paragraphs.
 
 ## HTML List:
 
-![Lists](https://media.giphy.com/media/B7o99rIuystY4/giphy.gif)
+![GIF for links](https://media.giphy.com/media/B7o99rIuystY4/giphy.gif)
 
 Lists are everywhere in life, from your shopping list to the list of directions you subconsciously follow to get to your house every day! Lists are everywhere on the web too. Here are a few resources on how to create lists.
 
 [Click here](https://www.youtube.com/watch?v=kUMe1FH4CHE&t=2985s) to watch a video on lists (watch from 00:49:00 to 00:59:00) (10 minutes)
 
 <Youtube videoId="kUMe1FH4CHE" start="2940" end="3600" />
+
 
 [Click here](https://www.freecodecamp.org/learn/responsive-web-design/basic-html-and-html5/create-a-bulleted-unordered-list) to learn & practice unordered list (3 minutes)
 
@@ -252,10 +266,10 @@ Learning Unit: List
 
 4. Question 4 of List (This is a placeholder).
 
-1. Option a
-1. Option b
-1. Option c
-1. Option d
+a. Option a
+b. Option b
+c. Option c
+d. Option d
 
 Answer: d
 
@@ -334,3 +348,13 @@ Learning Unit: Emphasis and importance in HTML
 Answer: a
 
 Learning Unit: Emphasis and importance in HTML
+
+-------
+
+- ul1
+- ul2
+- ul3
+
++ ul1
++ ul2
+
