--- a/Problem-Solving-using-Programming/Solving-problems-&-Writing-Algorithms/Introduction-to-Problem-Solving.mdx
+++ b/Problem-Solving-using-Programming/Solving-problems-&-Writing-Algorithms/Introduction-to-Problem-Solving.mdx
@@ -1,2 +1,5 @@
 Welcome to the lesson on Problem solving.
 
+#Lesson Objective: 
+	In this lesson you will learn how Programming is primarily a problem-solving skill and explore some real-world problems that are solved through programming. This is a live class and a warm welcome to the class on Problem solving. You will find more exciting things in this lesson. Happy learning!!
+
