--- a/course1/docs/Frontend Web Development/Sample Lesson.mdx
+++ b/course1/docs/Frontend Web Development/Sample Lesson.mdx
@@ -4,6 +4,8 @@ sidebar_position: 1
 
 import Youtube from "@site/src/components/Youtube";
 
+Sample message.
+
 Welcome to the lesson on Front-end web development. This would be a **self-paced class** which focuses on one of the fundamental topics in HTML - Text Fundamentals. Please make sure that you are completing the entire lesson.
 
 # HTML Text Fundamentals
