--- a/course1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/Introduction-to-Problem-Solving.mdx
+++ b/course1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/Introduction-to-Problem-Solving.mdx
@@ -1,6 +1,241 @@
-# Efficient Problem Solving
-## Objective
-In this lesson we will be dealing with the structured way of approaching a Programming Question and solving it efficiently. We will learn about the various methodologies and techniques used to get the right approach towards solving a question by simply discussing a problem of getting the shortest path in the puzzle.
 
-## Why should we solve a problem effeciently?
-As we know that in today's world there are so many computer softwares that helps us in getting our task done in an instant of time. So have you ever imagined that if these programs that had made up the software were just based on brute force approach then what would have happened.I’ll tell you, if these programs were not made efficiently then our software might have taken years to complete the task which could be done within seconds.
+# Introduction to Problem Solving
+
+## Lesson Objective:
+
+In this lesson you will learn how Programming is primarily a problem-solving skill and explore some real-world problems that are solved through programming. This is a live class and a warm welcome to the class on Problem solving. You will find more exciting things in this lesson. Happy learning!!
+
+  
+
+## Why is Problem solving important?
+
+Solving problems means making choices. Typically, effective problem-solving skills result in “happier, more confident, and more independent” individuals. This skill builds confidence in you and helps you make better decisions.
+
+## Reading content on the topic:
+
+You are here because you chose engineering as your career choice, you must question yourself why the world needs engineers.
+
+-   Engineers are needed to solve the world’s problems(from a bridge for crossing a water body to computers for processing data)
+    
+-   In the last 2 decades, computer hardware got less expensive and the Internet opened the gates for many advanced technologies
+    
+-   The job of a ‘software’ engineer is to solve problems by building software using various technologies that have evolved over the years.
+    
+
+  
+
+Some technologies and domains trending in computer science are:
+
+-   AI (Artificial intelligence)
+    
+-   Big Data Analytics
+    
+-   IoT (Internet of Things)
+    
+-   VR & AR (Virtual Reality & Augmented Reality)
+    
+-   Blockchain
+    
+-   Cybersecurity
+    
+
+  
+  
+
+Steps in Problem Solving:
+
+1.  Define the problem
+    
+
+The first step in solving a problem is to actually understand the problem and specifically identify the situation & circumstances that make it a problem. You have to evaluate various characteristics of the problem at hand. This process works in the following manner
+
+-   Diagnose the problem
+    
+-   Understand its context
+    
+-   Understand its background and behaviour/circumstances that made it a problem
+    
+-   Segregation of symptoms from the actual problem
+    
+
+  
+
+2.  Determine the root cause
+    
+
+-   Generally, complex problems require a team to explore and solve them. In this step, the team agrees on the problem definition and explores the possible and probable causes of the problem.
+    
+-   Various causes are studied and observed by the team until the root cause of the problem is identified.
+    
+-   The discovery of the root cause further helps in improving the problem definition and its understanding.
+    
+
+  
+
+3.  Develop the alternative solutions
+    
+
+-   The next step is to identify and develop various possible solutions to the problem. These multiple alternative solutions can significantly enhance the quality of your ideal solution.
+    
+-   The solutions proposed are then assessed on how each of them relate to the root cause and symptoms of the problem.
+    
+-   The less desirable solutions are discarded after noting down useful elements from them.
+    
+-   The advantages and disadvantages of the solutions left are evaluated
+    
+
+  
+
+4.  Select a solution
+    
+
+The 3 steps involved in this phase are:
+
+1.  Judge Feasibility: The efficiency of the solutions and whether these solutions will solve the problem without causing any unanticipated issues is evaluated.
+    
+2.  Select ‘Best-fit’ for the user: The most ideal solution according to the user requirements and engineering constraints is decided upon by the team
+    
+3.  A solution is chosen
+    
+
+  
+
+5.  Implement the solution
+    
+
+-   After a solution has been selected, the team decides and agrees upon various roles and responsibilities of members.
+    
+-   The team prepares a plan for the process(how the problem will be solved)
+    
+-   The tools and technologies that will be used are decided based on the expertise of the team members and the characteristics of the solution.
+    
+-   The start date is determined and the key milestones are set
+    
+
+  
+
+6.  Evaluate the outcome
+    
+
+-   In the last step, the effectiveness of the solution is evaluated. This is done by monitoring the outcome and its performance and comparing the data obtained with the set expectations.
+    
+-   Other parameters like cost and schedule are examined to identify the feasibility of the process for future projects.
+    
+-   The findings are then used to decide how the existing plan should be revised to better tackle similar problems in the future.
+    
+-   If the solution to the problem is not agreeable by the user or it is not upto the mark, then the problem is tackled again using the experience from the previous iteration and the steps are repeated in a similar manner.
+    
+
+  
+  
+
+## Presentation handled in the class:
+
+[PS0001 - Introduction to Problem Solving](https://docs.google.com/presentation/d/1VGQBWDHLU-RSfdbI9eOiOlFpZXFhLBNdzUlGpuITEPk/edit#slide=id.g1361768020b_0_70)
+
+  
+
+## Useful resources for you:
+
+Here are some interesting videos that can help you post-class to dive deeper into this topic.
+
+1.  Importance of Problem solving in a business environment : [Video](https://www.youtube.com/watch?v=-6IMRBDvOwo)
+    
+2.  The psychology of problem solving : [Video](https://www.youtube.com/watch?v=vg936IW9i7Q)
+    
+3.  Working backward to solve problems by Maurice Ashley : [Video](https://www.youtube.com/watch?v=v34NqCbAA1c)
+    
+4.  Bonus books : [Books](https://www.theexceptionalskills.com/problem-solving-books/)
+    
+
+## End of the lesson Assessment:
+
+1.  What is the correct way of solving problems?
+    
+
+1.  Solve the problem in any order you want
+    
+2.  Follow a proper plan and efficient algorithm
+    
+3.  Start solving the problem from the last
+    
+4.  None of the above
+    
+
+Ans: B. Follow a proper plan and efficient algorithm
+
+LU measured: Problem solving
+
+  
+
+2. What does a programmer need to be?
+
+  
+
+1.  Creative and innovative
+    
+2.  Hardworking but not creative
+    
+3.  Lazy and repetitive
+    
+4.  None of these
+    
+
+Ans: A. Creative and innovative
+
+LU measured: Problem solving
+
+  
+
+3. Which of the following is the 3rd step in Problem solving?
+
+1.  Define the problem
+    
+2.  Evaluate the outcome
+    
+3.  Implement the solution
+    
+4.  Develop the alternative solutions
+    
+
+Ans: D. Develop the alternative solutions
+
+LU measured: Problem solving
+
+  
+
+4. Which of the following techniques is used to determine the root cause of a problem?
+
+1.  Diagnose the problem
+    
+2.  Fishbone diagram
+    
+3.  Gantt chart
+    
+4.  Background check
+    
+
+Ans: B.Fishbone diagram
+
+LU measured: Problem solving
+
+  
+
+5. Which job does not require programming?
+
+  
+
+1.  Weather forecast
+    
+2.  Trading with crypto ad stocks
+    
+3.  Labour work
+    
+4.  Self Driving vehicles
+    
+
+  
+
+Ans: C. Labour work
+
+LU measured: Problem solving
