--- a/course1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/Introduction-to-Problem-Solving.mdx
+++ b/course1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/Introduction-to-Problem-Solving.mdx
@@ -42,9 +42,9 @@ Some technologies and domains trending in computer science are:
   
   
 
-**Steps in Problem Solving:**
+Steps in Problem Solving:
 
-**1.  Define the problem**
+1.  Define the problem
     
 
 The first step in solving a problem is to actually understand the problem and specifically identify the situation & circumstances that make it a problem. You have to evaluate various characteristics of the problem at hand. This process works in the following manner
@@ -60,7 +60,7 @@ The first step in solving a problem is to actually understand the problem and sp
 
   
 
-**2.  Determine the root cause**
+2.  Determine the root cause
     
 
 -   Generally, complex problems require a team to explore and solve them. In this step, the team agrees on the problem definition and explores the possible and probable causes of the problem.
@@ -72,7 +72,7 @@ The first step in solving a problem is to actually understand the problem and sp
 
   
 
-**3.  Develop the alternative solutions**
+3.  Develop the alternative solutions
     
 
 -   The next step is to identify and develop various possible solutions to the problem. These multiple alternative solutions can significantly enhance the quality of your ideal solution.
@@ -86,7 +86,7 @@ The first step in solving a problem is to actually understand the problem and sp
 
   
 
-**4.  Select a solution**
+4.  Select a solution
     
 
 The 3 steps involved in this phase are:
@@ -100,7 +100,7 @@ The 3 steps involved in this phase are:
 
   
 
-**5.  Implement the solution**
+5.  Implement the solution
     
 
 -   After a solution has been selected, the team decides and agrees upon various roles and responsibilities of members.
@@ -114,7 +114,7 @@ The 3 steps involved in this phase are:
 
   
 
-**6.  Evaluate the outcome**
+6.  Evaluate the outcome
     
 
 -   In the last step, the effectiveness of the solution is evaluated. This is done by monitoring the outcome and its performance and comparing the data obtained with the set expectations.
