--- a/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
@@ -1,8 +1,437 @@
 # Thinking with Numbers - Part 1
 
-## Objective
-In this lesson, you will learn  how you should approach programming problems. We will try to understand the thinking process that is involved in approaching programming problems by building an analogy with numbers and observations related to numbers.
-Why to think with numbers?
+
+
+# Objective
+
+In this lesson, you will learn how you should approach programming problems. We will try to understand the thinking process that is involved in approaching programming problems by building an analogy with numbers and observations related to numbers.
+
+# Why to think with numbers?
+
 You must understand that computers are basically naive devices that process data and convert it into the required results and they use the instructions provided by the programmer to do so. Basically, in the future when you will be using your programming skills to solve coding problems, you will find that to think of the logic to the problems, you will be trying to uncover patterns in the examples provided. And that’s one of the places you will be trying to think in numbers and number patterns.
 
+  
 Also, many times you will find pattern problems like these to check your logical thinking ability in preliminary tests that you will face for getting hired.
+
+# Introduction to the Lesson
+
+Today, we will be solving some number puzzles which will mainly test your skills of observation and pattern discovery.
+
+  
+  
+
+![](https://lh6.googleusercontent.com/3yWpJU_700H041idYCRH2AlIqc-KeKAz39ygW3mQnS5DTKIID1oD7upxepejmx4vqHh_i-H26uvuPBbpN6hvb0C0IRwitc4JgfUTRO_VMUXCoqe9OT5w0yosL798DsaGQgvla8biU5Ojk7edqTo)
+
+  
+
+This will be a fun and playful lesson and you will be guided through the thought process that is involved in solving these puzzles.You can find a plethora of such problems on various online platforms. We will be discussing 3 different formats for problems in this lesson and they are as follows:
+
+  
+
+1.  MatchStick Magic
+    
+2.  Number Series
+    
+3.  KenKen Puzzles
+    
+
+  
+  
+  
+  
+  
+
+## MATCH STICK MAGIC
+
+We will be looking at some mathematical equations and geometrical shapes made from matchsticks(which are nothing but straight lines of the same length). Let's consider the following problem statement:
+
+  
+
+Problem Statement: Correct the equation by rearranging exactly two matchsticks
+
+  
+![](https://lh4.googleusercontent.com/E8gyH515RncPvALdy5ixQp9JfINBaTYwPf17zobyGhHU7Zzo-zAWl2cv1oLMfJ0Qk_Rx0TeIUqWKXHJfwShT5ixLun4VwQU9b4MYB8jLZ9eWslX2YJ1EirfYuvjSRenP4M3fTAbL4fMvSDngZA)  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+Ways of thinking and dealing with such problems
+
+  
+
+The way to approach these types of problems is to just observe the structure of the shapes included and try using the information you just gathered in multiple places until a solution clicks. The trick here is the speed with which you can observe and that will just come from practice and forcing your brain to think.
+
+  
+
+How to approach
+
+Let us consider this arrangement of matchsticks, as you can see that the equation specified in the pattern is wrong.
+
+9 times 4 is 36 but the answer depicted is 46.
+
+  
+
+Now, the first thing that might come to mind is can we rearrange the 4 in RHS to make it 3 somehow by moving 2 sticks because that will make it 36.
+
+But, on further inspection we see that to formulate 3 we would need at least 5 sticks but the 4 in RHS has only 4 sticks, and we also can’t take a stick from the other digits because then it would change the equation.
+
+  
+
+Then, we can also observe that 46 does not appear in the tables of any of the 1 digit numbers from 1 to 9(Pause and try determining why?). If you were able to determine the reason for the above statement, excellent. If you were not, we are here to discuss just that, now because we are dealing with multiplication, we have to broaden our mind and think in terms of numbers(factors, multiples, etc.).
+
+  
+![](https://lh4.googleusercontent.com/-Zauck5a2RqmIP4STrwHGjJI2el8yAk1Z74EDq4uLhVhyD0dpyq6AyTxLkmUMULVwli9WRo8ik5XMHjyE2_AKko0bqYJVnJ5U61jn9lsbhNAY0_kGMTqWSIl-dHZHziyA3khxRaF96OuM0L4dDE)  
+  
+  
+
+Possible pairs of numbers that
+
+multiply to the number 46:
+
+  
+  
+
+46 does not appear in the tables of any 1 digit number because we can observe that 1, 2, 23, 43 are the factors of 46. So, we can conclude that we surely would have to change the RHS for this to be correct.
+
+  
+
+Let’s explore more,
+
+-   One option that comes to mind is removing a stick from 6 and making it 5(RHS = 45). Now we would need a 5 * 9 in LHS
+    
+-   We already have 9
+    
+-   Can we change the 4 to 5 somehow by using the stick from RHS, upon inspection yes we can.
+    
+
+  
+
+In this manner, we have solved the problem.
+
+  
+  
+![](https://lh6.googleusercontent.com/MB-S02EmJjlqOYRWsyXmxaMc3hwMpTeZydHJ_wLDt3hVZuyENu1tCGQ_gih-KKLhnE8avVECFveO0fNFuZ-TSk8sb8AK-IWmro4aSo2VNY4tHtGC81UvD0dSUtzkJaFba0lNoWeKlys8tGyGBQ)  
+
+Follow Up
+
+You can try to identify the solution to some example problems that I am providing. Remember that the problems similar to the coding problems you will face later do not have a single pre-defined algorithm to find their solution. Your job is to find a solution by taking inspiration from the methodologies I’ve discussed above.
+
+  
+  
+![](https://lh6.googleusercontent.com/gJ79paRRP772DL_4Zf3wHeRM2GRTPnf3wSr0qUG6XD7aT6mxggAqPkz4JWcyuU34hO1ycIHNzgrhgO6CChR_lNjIClKcnYMmnTFOMogYDNtN1G4n61GBsxtiK3xl_2eRRsm8kiI69qooEwztnA)  
+
+Ques 1:
+
+a) Remove 3 sticks to leave 3 squares
+
+b) Remove 3 sticks to leave 5 squares
+
+  
+  
+  
+  
+  
+  
+  
+  
+
+Solution:
+
+1.    
+    ![](https://lh3.googleusercontent.com/gG5AWHicf5KNNxMe4PIrtI5yScJC9VtKvkJ2SfkD7lAj_-hEeUn6AQU6ZJ0U2gtRjZOZ1dBplY89umCtbo1w8-jj8dhvgYrolJ2cHLq4Z6SN7ydvilVu2xrntY7orKAvO3eX8TLF_t9kuQVPtA)
+
+  
+  
+  
+  
+  
+  
+  
+  
+![](https://lh5.googleusercontent.com/GLduspmTFIngHYlsOnrkzyeSXk4ZPtqxKUZd-3sB_q3oWgjpGWTLOy4Asa3J_P6ykrvKTDtTn7W3-B3LyNn779Aj9pdd_2pFUa5iuunKGrdU-0AsMRA5-7OTAdzv4fYrjcV8svMJsRSxeWZS_w)
+
+2.    
+    
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+Ques 2: Move 1 stick to correct the equation
+
+  
+![](https://lh4.googleusercontent.com/E9HGsLvY6_bX4938M75biJNm18--f58bq8DkEsOTwOCdyl-FltB6Aza6EYt0xYIkQtstl_VeSR_9nUF0FUW3jpuANTL3cmL0lZGlS0ouSlt2uTpacyQUD5-wJazXhkfC8C3lrjYLMZl1ZKzN-A)  
+  
+  
+  
+  
+![](https://lh3.googleusercontent.com/NLOtze0Ci6YX33lN4v1QPSb1DXi3iwj-c_55Ezf3VsAz1XSMCZ0wMqi31xMnrPveF3zqMP20SriRG4hRDYXDRjKTUEm7Fx65_SiLXiX6Szma6gqAMUNI2k2_SiaSJKAld2rU_25x6-0cRffEKg)
+
+Solution:
+
+  
+  
+  
+  
+  
+
+## NUMBER SERIES
+
+We will be looking at some diagrams consisting of numbers and some of the number(s) might be missing from the diagram. Your job is to identify the missing number(s) and to do so you will be using the specified numbers in the diagram to find some pattern. Let's consider the following problem statement:
+
+  
+
+Problem Statement: Which number should come in the place of the question mark?
+
+  
+
+![](https://lh5.googleusercontent.com/q4THYae29gYXpMbbWr3TTf8nDOArzyS8BA-e33udWTMocviv1xzQO5VA2bEjC4_V9UjTZqEl94IbVS8hziZyki4-FhEV9KeNbz07f5OtTjN52ZdxVGgVhicNA1qANfeEaxUnBnX6qAEiF2VoFw)
+
+  
+
+Ways of thinking and dealing with such problems
+
+The method of dealing with numbers series problems like this one is to just observe the numbers that are known and find patterns between those numbers. The basic approach that I would suggest for such problems is to just look for relationships and patterns between numbers in all directions i.e. vertically, horizontally, diagonally etc. Along with that, your numerical ability also plays an important role here i.e. how quickly you can perform basic arithmetic operations. I would also suggest you to learn squares and cubes of at least the first 15 numbers.
+
+  
+
+How to approach
+
+If we consider the sample problem we have taken, we can see that we have been given 3 individual circular shapes with 4 parts each. So, from this we can conclude that a common pattern is followed in all three of these circles. Now, to uncover the pattern we just brainstorm by remembering these two things:
+
+1.  Look for relationships and patterns between numbers in all directions i.e. vertically, horizontally, diagonally etc. as I already specified.
+    
+2.  Check for the exact arithmetic operations being performed here.
+    
+
+  
+
+We observe that the diagonal elements from bottom-left to top-right are being multiplied and the result consists of 2 digits that are represented by the digits from top-left and bottom-right.
+
+  
+
+So, the number that is missing is 6 (9*4 = 3 6)
+
+  
+
+Follow Up
+
+You can try to identify the solution to some example problems that I am providing. Remember that the problems similar to the coding problems you will face later do not have a single pre-defined algorithm to find their solution. Your job is to find a solution by taking inspiration from the methodologies I’ve discussed above.
+
+  
+![](https://lh6.googleusercontent.com/wQJZkhiVDOw__LLIMavISfadQh_U5xrphB13YjrVCObCetrRcyTU3Ppp83d6XpZRRCDPXUCDu5j_xIt4JC08ySwGRnPIdAZOmiYpbPXmQmhx6OJ3whhzRJnKJlZRbxTFuKGwlsqBe2rWTrGEOg)
+
+1.    
+    
+
+  
+  
+  
+  
+  
+  
+  
+  
+
+Ans: 4 + 8 = 12 + x => x = 0
+
+  
+![](https://lh3.googleusercontent.com/9GGz7kfM1DFLqm8_OT3qvHmNxfsklAbry6e0WgbnO6GZFCk3nJ32jZ-2NcGw6BXZ4SDBbxYBcGBZ4tOlbm2i-RVcwpPCzKDlkD7KWpIoGiTp-qph5fXO_SDt4bFMvvoFjn9_jvIPVR4HxGWC9w)
+
+2.    
+    
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+Ans: (6 x 12) – 5 = 67
+
+  
+  
+
+3.    
+    ![](https://lh6.googleusercontent.com/LF__wNQC-JaG_LlG5J5br1-fn8Pzk-qcMESObkJikteoU2z0pLzJpfzg9KySnXtnmQzslnx2ogk5rHPZOnaq6OYe_RlSGbPQ5HV72NLHA7yBvquPexFZfgnRel8Cq3FXk09KcdB1RJzTlOe8lg)
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+Ans: 358 x 2 = 716, so 1
+
+  
+
+## KenKen PUZZLES
+
+We will be looking at some special puzzle games in this section. We have already previously talked about the importance of quickness in using basic arithmetic operations. Well, KenKen puzzles test just that particular ability.
+
+  
+
+Problem Statement: Here, we are given a grid of size 4x4 and it has been divided into highly outlined areas as we can see.
+
+-   These heavily outlined areas are called “cages”
+    
+-   The top left corner of each cage has a number and an arithmetic operation associated with it, the number defines the result that we must get after applying the specified arithmetic operation on the numbers in the cage.
+    
+-   Each row and column must be uniquely filled with numbers within a range and this range is decided by grid size (4x4 grid means we have to fill each row and column with numbers from 1 to 4).
+    
+
+  
+  
+![](https://lh5.googleusercontent.com/SPma07P3_u1Ey5O9W6LRGdHLEBm2W-o7SLboxzeY9QxWF4JGbi0jSDHnKbEAA22VgTeQ87j74UF-WvrZIy1FVDmmS_tlHX4hwMejhGjf2fa4pGyUpNElta9iE0-rLwTtsLpyWdDiiCnfFnaOfw)  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+Approach to KenKen puzzles
+
+  
+
+These puzzles will help us in making decisions in a constrained manner which is very helpful while solving problems. Here, you can’t use a number more than once in a row or column. Similarly, while solving coding problems you might be constrained to not use some tools by an interviewer in an interview.
+
+  
+
+In the puzzle we can see that, first of all we see that there are two cages with only one cell and they can only have one number i.e. 3 and 1. Take this as the starting point, and move forward with the consideration that we can’t use 3 in the 2nd row and 2nd column row and 1 in the last row and first column.
+
+{Image}
+
+  
+
+Now, we just have to consider the possible combinations of numbers that can work by keeping the constraints in mind.
+
+For example, in the top left most cage, we have 1-, the possible combinations that can achieve this result are 1,2(X); 2,1; 2,3(X); 3,4; 4,3(X).
+
+The combinations marked with X are not possible due to the constraints we obtained by filling the initial unit cells.
+
+{Image}
+
+The possible combinations are 2,1; 3,4. Now, again we take 3,4 and fill the box, we see that we are only left with 2 and 4 for the first row.
+
+{Image}
+
+And, this is a problem, because we have to fill the middle-left cage with 1- which is not possible with 2 and 4. Hence, we have reached the only possible combination for the top-left cage i.e. 2,1. Similarly, we can use the already filled cells to fill the cells that are empty. Remember, the process of elimination of possibilities is the key here.
+
+  
+![](https://lh5.googleusercontent.com/dtdfaeDEa8L_BsASGhcq8RP9GXxp5yy0a2z5VYl3ciwDYwwxr5FhICO5r28VyauX6htOajcr8IYPfRVpuGRy-kBq5KgC_E_y4kd4KlJ8OSgIlSg5KqfS8O6VY_j3kt0WLCTF5B4w3cNGK0--VQ)
+
+Complete Solution:
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+Follow Up
+
+You can try to solve more of these puzzles and if you are still stuck, try solving KenKen Puzzles of size 3x3 online and then using the experience you will be able to solve the harder 4x4 puzzles.
+
+  
+
+Solve the given KenKen puzzle  Solution![](https://lh3.googleusercontent.com/fKU-dD57jGJ3TYheSyvS4iC97IEtD-qLwnQ0v6VsrgJS7wVIyku9oGLuB5dHz7BPFJ-2-S_RXV0Tdm8VCT_7YQ9xitBFZ8IXIdFPxTY3PjMhOjSI_x3e5Fwx0AlZw-w3OeK1XPFufiPQRW0OWQ)
+
+![](https://lh5.googleusercontent.com/IE5jlunb3TN2C3Bvua6aYD4KMhBYY62N-ms4KoQsUHZIS_4zZzT0lRDppsov00ldwlp6Spg_wA_xfNWmcJdnfLwGNUaNGt2qpntR_ErP6DgEbMVINToZaMMhrr3OAzRdXfV4Pb-qL9Zm_XyKCg)
+
+  
+  
+  
+  
+
+# End-of-the-lesson Assessment
+
+Q1: In the Match Stick Magic challenge, which two digit number can be formed with the help of sticks from digit 9?
+
+1.  41
+    
+2.  22
+    
+3.  14
+    
+4.  (a) & (b) both [✔]
+    
+
+  
+
+Q2: Find the number that will come in place of the question mark.
+
+  
+![](https://lh6.googleusercontent.com/SP79cI31mFm8APnwWXy4DOwqEVXYrmztjq8biNli4drNoPdHjXzMZRfj2fhNW0EbqhSVBcQl6SykjVq396dThVPNVzErK3NAbnQz8hMZZUQzUbXIGV2-_w6tEcPyxB2nRCm1v_iAQZrQrK-cWA)  
+  
+  
+  
+  
+  
+  
+  
+
+1.  51 [✔]
+    
+2.  22
+    
+3.  12
+    
+4.  54
+    
+
+  
+
+Q3: Find the digit that will come in place of the question mark in the following KenKen puzzle![](https://lh4.googleusercontent.com/oU1i1ObjDXwGsFR-SzfKKA07HhIj86GxCu_O3d3Fj7FAPOk2nt5YbahXfmvci0A7A-gc9FS_IDnI0p6YpXRayvfNLd4srbTg5CM7l_xLG09Zjk__Ho_CpwhyZlUmaiMDqvpo5LLRWXt3EOd-Vw)
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+1.  1
+    
+2.  3 [✔]
+    
+3.  2
+    
+4.  4
